# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  default.conf
cgi/: .htaccess  php-config  python3.9
configs/: School21.conf  Ubuntu.conf  default.conf  nginx.conf
src/: Client.cpp  Client.hpp  Colors.h  Exception.cpp  Exception.hpp  Extention.cpp  Extention.hpp  File.cpp  File.hpp  IndexHtmlMaker.cpp  IndexHtmlMaker.hpp  Location.cpp  Location.hpp  Parser.cpp  Parser.h  Parser.hpp  Port.cpp  Port.hpp  Server.cpp  Server.hpp  ServerBlock.cpp  ServerBlock.hpp  TextHolder.cpp  TextHolder.hpp  default.conf  main.cpp  nginx.conf  test.cpp
src/cgi/: php.ini
src/www/server1/: action_page.php  fileupload.php  index copy.html  index.html
src/www/server2/: ssylko.html
www/server1/: emptyindex.html  error403.html  filedownload.php  fileupload.php  index.html  test.php  test.py
www/server1/404/: 404 Error Page Templates Free Download.url  index.html  readme.txt
www/server1/404/css/: style.css
www/server1/error/: 400.html  401.html  403.html  404.html  405.html  408.html  411.html  500.html
www/server1/uploads/: test
www/server2/: index.html
www/server3/temp/: index.html
